<?xml version="1.0"?>
<package format="3">
  <name>jetbot_delivery</name>
  <version>0.1.0</version>
  <description>Jetbot delivery mission package (mission-level nodes)</description>
  <maintainer email="you@example.com">Yoka</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
</package>
